@@ -1,0 +1,2 @@
+Build friendly R packages that praise their users if they have done
+something good, or they just need it to feel better.
