@@ -1,0 +1,6 @@
+$NetBSD: distinfo,v 1.1 2019/08/09 18:29:51 brook Exp $
+
+SHA1 (R/praise_1.0.0.tar.gz) = c26a2f8c8f5999115d59d9edd653137c5db99b43
+RMD160 (R/praise_1.0.0.tar.gz) = b13351fa747f0a17329484e3a24e9ae82a49940d
+SHA512 (R/praise_1.0.0.tar.gz) = 6405e733884e95b165ed285e1a9f6470b76d96abdf3516292bdbacd562667ccc747d78b4abe96d7d512aeb10dde8c6db06d04cbe3e774bbcdb0fc529365bb0b8
+Size (R/praise_1.0.0.tar.gz) = 6100 bytes
